# AEC_AI_Shorts

./: .env.example  .gitignore  AEC_AI_SHORTS_PLAN.md  EXECUTIVE_SUMMARY.md  FIRST_RUN.md  README.md  REVIEW.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: daily-short.yml  healthcheck.yml
auth/: get_token.py
pipeline/: __init__.py  agent_publish.py  agent_script.py  agent_video.py  agent_voice.py  analytics.py  config.py  critic_script.py  errors.py  fetch_news.py  healthcheck.py  history.py  llm_gemini.py  logging_setup.py  loops.py  notify.py  preflight.py  render_props.py  render_qa.py  run.py  script_types.py  topic_select.py  topics_aec.py  voice_qa.py
remotion/: package-lock.json  package.json
remotion/src/: Root.tsx  Short.tsx  schema.ts
remotion/src/components/: Captions.tsx  ProgressBar.tsx
remotion/src/scenes/: CTA.tsx  FeatureCards.tsx  Hook.tsx  Workflow.tsx
remotion/src/theme/: Background.tsx
state/: scripts_created.json
tests/: test_agent_publish.py  test_agent_script.py  test_agent_video.py  test_agent_voice.py  test_analytics.py  test_config.py  test_critic_script.py  test_errors.py  test_fetch_news.py  test_get_token.py  test_healthcheck.py  test_history.py  test_infra.py  test_llm_gemini.py  test_logging_setup.py  test_loops.py  test_notify.py  test_render_props.py  test_render_qa.py  test_run.py  test_script_types.py  test_topic_select.py  test_voice_qa.py
