[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aec-ai-shorts"
version = "0.1.0"
description = "Loop-engineered automatic YouTube Shorts pipeline for AI in the AEC industry"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["pipeline"]
branch = true

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false
